# clean_code_in_python

./: .flake8  .pre-commit-config.yaml  context_managers.py  decorators.py  descriptors.py  documentation.py  function_inputs.py  indices.py  iterable_objects.py  properties_attributes.py  pyproject.toml  sequences.py
