[tool.poetry]
name = "clean-code-in-python"
version = "0.1.0"
description = ""
authors = ["Michal Urbanczyk <michal.urbanczyk@grapeup.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.1.0"
pre-commit = "^3.7.1"
isort = "^5.13.2"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
skip_glob = ["**/__init__.py"]
line_length = 119
skip_gitignore = true
known_first_party = ["src"]
force_sort_within_sections = true